# dp-fairness

./: README.md  analyze.py  attenuation.csv  baseline.csv  baseline_xgb.csv  driver.py  generate_synth_mst.py  generate_synth_pb.py  interventions.py  make_backfire_table.py  make_headline_bar.py  metrics.py  prepare_acs_data.py  pyproject.toml  ratios_long.csv  raw_summary.csv  risk_summary.csv  run_all.py  run_grid.py  smoke_test.py  stratified.py  summary.csv  train_baseline.py  train_baseline_xgb.py  train_grid.py  train_grid_xgb.py  variance.csv  wilcoxon.csv
analysis/: __init__.py  ci.py  io.py  make_failures.py  make_pareto.py  make_plateau.py  make_ratios.py  make_raw_summary.py  make_risk.py  make_side_effects.py  make_variant_tests.py  make_wilcoxon.py  metrics.py  palette.py  plot_eps_sweep.py  plot_forest.py  plot_headline_bar.py  plot_headline_delta.py  plot_heatmap.py  plot_scatter.py  stats_tests.py  style.py
slurm/: generate_synth_mst_array.sbatch  generate_synth_mst_array_short.sbatch  generate_synth_mst_serial.sbatch  generate_synth_pb_array.sbatch  run_baseline.sbatch  run_baseline_xgb.sbatch  run_grid_array.sbatch  run_grid_pb_array.sbatch  run_grid_xgb_array.sbatch  run_grid_xgb_pb_array.sbatch
