[project]
name = "dp"
version = "0.1.0"
requires-python = ">=3.11, <3.12"
dependencies = [
    "aif360==0.6.1",
    "dpmm==0.1.9",
    "fairlearn==0.13.0",
    "folktables==0.0.12",
    "huggingface-hub>=1.11.0",
    "matplotlib>=3.10.8",
    "numpy==1.26.4",
    "pandas==2.1.0",
    "pyarrow>=23.0.1",
    "scikit-learn==1.5.0",
    "scipy==1.15.3",
    "xgboost==3.2.0",
]
